fix deprecated-constructor warning in LimelightHelpers